# docs/swagger.yaml
@@ -1,11 +1,30 @@
 definitions:
+  dto.AdminInfoOutput:
+    properties:
+      avatar:
+        type: string
+      id:
+        type: integer
+      introduction:
+        type: string
+      login_time:
+        type: string
+      name:
+        type: string
+      roles:
+        items:
+          type: string
+        type: array
+    type: object
   dto.AdminLoginInput:
     properties:
       password:
+        description: 密码
         example: "123456"
         type: string
       username:
-        description: "example 默认值\nComment\t数据库备注 对应数据库中的列Comment值"
+        description: "example 默认值\nComment\t数据库备注 对应数据库中的列Comment值\njson: 输出时转为json
+          form:转换为结构体"
         example: admin
         type: string
     required:
@@ -15,6 +34,7 @@ definitions:
   dto.AdminLoginOutput:
     properties:
       token:
+        description: token
         example: token
         type: string
     type: object
@@ -34,6 +54,25 @@ definitions:
 info:
   contact: {}
 paths:
+  /admin/admin_info:
+    get:
+      consumes:
+      - application/json
+      description: 管理员信息
+      operationId: /admin/admin_info
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.AdminInfoOutput'
+              type: object
+      summary: 管理员信息
+      tags:
+      - 管理员接口
   /admin_login/login:
     post:
       consumes:
