# dto/admin.go
@@ -1,0 +1,13 @@
+package dto
+
+import "time"
+
+type AdminInfoOutput struct {
+	ID int `json:"id"`
+	Name string `json:"name"`
+	LoginTime time.Time `json:"login_time"`
+	Avatar string `json:"avatar"`
+	Introduction string `json:"introduction"`
+	Roles []string `json:"roles"`
+
+}
